@@ -7,6 +7,7 @@ Date: ???
     - Streamlined hand crafting of wood pellets and boards
     - Standardized terrain vehicle speed
     - Refund all landfill when painting over sand islands
+    - Added missing tech prerequisites
   Bugfixes:
     - Moved Bob's modules settings overrides from Sea Block to Circuit Processing
     - Fixed multiplayer desync issue
